--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CSLA-Core" version="4.5.40" targetFramework="net40" />
-  <package id="Microsoft.Bcl" version="1.0.19" targetFramework="net40" />
+  <package id="CSLA-Core" version="4.5.700" targetFramework="net40" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net40" />
   <package id="Microsoft.Bcl.Async" version="1.0.165" targetFramework="net40" />
-  <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
 </packages>
